--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Fandi Hasnur",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "winston": "^3.13.0",
